--- a/app2/angular.json
+++ b/app2/angular.json
@@ -23,8 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../grid.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
