--- a/nginx.vh.conf
+++ b/nginx.vh.conf
@@ -28,5 +28,13 @@
         gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     }
 
+    location /elements.js {
+        root /multi-app;
+        index index.html index.html;
+        expires 365d;
+        gzip on;
+        gzip_proxied expired no-cache no-store private auth;
+        gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    }
 
   }
